--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>My Portfolio</title>
     <link href="https://fonts.googleapis.com/css?family=Lato:100,300" rel="stylesheet">
-    <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/font-awesome-4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/styles.css">
     <script src="js/jquery-3.2.1.min.js"></script>
@@ -17,14 +17,16 @@
     <div class="container-fluid">
         <div class="row">
             <header>
-                <div class="col-md-6 col-sm-4 col-xs-4">
-                    <img class="title-logo" src="images/udacity_logo.png" alt="Udacity Logo" height="100" width="100">
-                </div>
+                <nav>
+                    <div class="col-md-6 col-sm-4 col-xs-4">
+                        <img class="title-logo" src="images/udacity_logo.png" alt="Udacity Logo" height="100" width="100">
+                    </div>
 
-                <div class="col-md-6 text-right text-uppercase">
-                    <h1 class="title-super text-thin">Emmanuel Nanadoum</h1>
-                    <h4>Front-End Developer</h4>
-                </div>
+                    <div class="col-md-6 text-right text-uppercase">
+                        <h1 class="title-super text-thin">Emmanuel Nanadoum</h1>
+                        <h4>Front-End Developer</h4>
+                    </div>
+                </nav>
             </header>
         </div>
 
@@ -34,101 +36,100 @@
                 <hr>
             </div>
         </div>
+        <!--/.row -->
 
         <!-- Hero Image -->
-        <div class="row">
+        <section class="row">
             <div class="col-md-12">
                 <img class="img-responsive center-block" src="images/Codes.jpg" width="1140" height="500" alt="banner image">
             </div>
-        </div>
+        </section>
         <!-- End of Hero Image -->
 
 
         <!-- Featured Work -->
-        <div class="row">
+        <main class="row">
             <div class="col-md-12">
                 <h2 class="text-muted">Featured Work</h2>
-            </div>
-        </div>
-        <!-- End of Featured Work -->
 
-        <!-- PORTFOLIO -->
-        <main>
-            <div class="row text-center">
-                <div class="col-md-4">
+
+                <!-- End of Featured Work -->
+
+                <!-- PORTFOLIO -->
+                <article class="col-md-4">
                     <img class="img-responsive" src="images/Screen%20Shot%202017-07-09%20at%208.49.26%20PM.png" alt="Restaurant Picture" width="555" height="300" data-toggle="modal" data-target="#project1">
                     <h3 class="text-uppercase">Santos Restaurant</h3>
                     <p><a class="portfolio-link" href="https://nanadoum81.github.io/SantosRestaurantWebsite/" target="_blank">Link to project</a></p>
-                </div>
+                </article>
 
-                <div class="col-md-4">
+                <article class="col-md-4">
                     <img class="img-responsive" src="images/laketahoe.jpg" alt="Lake Tahoe Page" width="555" height="350" data-toggle="modal" data-target="#project2">
                     <h3 class="text-uppercase">Niagara Falls Demo Concept</h3>
                     <p><a href="https://nanadoum81.github.io/Niagara-Falls-travel-page-concept/" target="_blank">Link to project</a></p>
-                </div>
+                </article>
 
-                <div class="col-md-4">
+                <article class="col-md-4">
                     <img class="img-responsive" src="images/image%20(1).jpg" alt="Mason &amp; Daughters" width="555" height="300" data-toggle="modal" data-target="#project3">
                     <h3 class=" text-uppercase">MASON &amp; Daughters</h3>
                     <p><a href=" https://nanadoum81.github.io/Bootstrap-4-Simple-Landing-Page/" target="_blank">Link to project</a></p>
-                </div>
-            </div>
-
-            <!-- END OF PORTFOLIO -->
-
-            <!-- MODAL Project 1 -->
-            <div class="modal fade" id="project1" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-                <div class="modal-dialog">
-                    <div class="modal-content">
-                        <div class="modal-header">
-                            <h4 class="modal-title" id="myModalLabel">Favorite App Page</h4>
-                        </div>
-                        <div class="modal-body">
-                            <img class="img-responsive" src="images/Screen%20Shot%202017-07-09%20at%208.49.26%20PM.png" alt="Santos Restaurant" width="555" height="300"> This was my first project in this class. I learned a lot about HTML and CSS.
-                        </div>
-                        <div class="modal-footer">
-                            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <!-- END OF MODAL PROJECT 1 -->
-
-            <!-- MODAL Project 2 -->
-            <div class="modal fade" id="project2" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-                <div class="modal-dialog">
-                    <div class="modal-content">
-                        <div class="modal-header">
-                            <h4 class="modal-title" id="myModalLabel">Favorite App Page</h4>
-                        </div>
-                        <div class="modal-body">
-                            <img class="img-responsive" src="images/laketahoe.jpg" alt="lake tahoe" width="555" height="300"> This was my first project in this class. I learned a lot about HTML and CSS.
-                        </div>
-                        <div class="modal-footer">
-                            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <!-- END OF MODAL PROJECT 2 -->
-
-            <!-- MODAL Project 3 -->
-            <div class="modal fade" id="project3" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-                <div class="modal-dialog">
-                    <div class="modal-content">
-                        <div class="modal-header">
-                            <h4 class="modal-title" id="myModalLabel">Favorite App Page</h4>
-                        </div>
-                        <div class="modal-body">
-                            <img class="img-responsive" src="images/image%20(1).jpg" alt="Mason and Daughters" width="555" height="300"> This was my first project in this class. I learned a lot about HTML and CSS.
-                        </div>
-                        <div class="modal-footer">
-                            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                        </div>
-                    </div>
-                </div>
+                </article>
             </div>
         </main>
+
+        <!-- END OF PORTFOLIO -->
+
+        <!-- MODAL Project 1 -->
+        <div class="modal fade" id="project1" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h4 class="modal-title" id="myModalLabel">Favorite App Page</h4>
+                    </div>
+                    <div class="modal-body">
+                        <img class="img-responsive" src="images/Screen%20Shot%202017-07-09%20at%208.49.26%20PM.png" alt="Santos Restaurant" width="555" height="300"> This was my first project in this class. I learned a lot about HTML and CSS.
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- END OF MODAL PROJECT 1 -->
+
+        <!-- MODAL Project 2 -->
+        <div class="modal fade" id="project2" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h4 class="modal-title" id="myModalLabel">Favorite App Page</h4>
+                    </div>
+                    <div class="modal-body">
+                        <img class="img-responsive" src="images/laketahoe.jpg" alt="lake tahoe" width="555" height="300"> This was my first project in this class. I learned a lot about HTML and CSS.
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- END OF MODAL PROJECT 2 -->
+
+        <!-- MODAL Project 3 -->
+        <div class="modal fade" id="project3" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h4 class="modal-title" id="myModalLabel">Favorite App Page</h4>
+                    </div>
+                    <div class="modal-body">
+                        <img class="img-responsive" src="images/image%20(1).jpg" alt="Mason and Daughters" width="555" height="300"> This was my first project in this class. I learned a lot about HTML and CSS.
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
     <!-- END OF MODAL PROJECT 3 -->
 
@@ -143,13 +144,15 @@
 
             <ul>
                 <li><a href="https://www.linkedin.com/in/emmanuel-nanadoum-7971b7a8/"><i class="fa fa-linkedin fa-2x"></i></a></li>
-                <li><a href="#"><i class="fa fa-github-square fa-2x"></i></a></li>
+                <li><a href="https://github.com/Nanadoum81" target="_blank"><i class="fa fa-github-square fa-2x"></i></a></li>
                 <li><a href="#"><i class="fa fa-facebook fa-2x"></i></a></li>
                 <li><a href="#"><i class="fa fa-instagram fa-2x"></i></a></li>
                 <li><a href="nanadoum.emmanuel90@gmail.com"><i class="fa fa-envelope-o fa-2x"></i></a></li>
             </ul>
         </div>
     </Footer>
+    <script src="js/jquery-3.2.1.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
 </body>
 
 </html>
